my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ERECUR/T_ERECUR-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_ERECUR_STRUCT_H
#define T_ERECUR_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_ERECUR(void);


#endif /* not T_ERECUR_STRUCT_H */
